migrate to windows for dev

--- a/PaipaiChat.csproj
+++ b/PaipaiChat.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\lib\" />
+    <Folder Include="DemiData\" />
   </ItemGroup>
   
   <ItemGroup>
@@ -17,5 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="DemiData\" />
   </ItemGroup>
 </Project>
